Fixed gap in top navigation menu when collapsed.

--- a/KinaUnaWeb/wwwroot/css/site.css
+++ b/KinaUnaWeb/wwwroot/css/site.css
@@ -291,7 +291,7 @@
     .navbar-collapse {
         position: fixed;
         display: block;
-        top: 57px;
+        top: 55px;
         height: auto;
         width: 98vw;
         right: 0;
